Adds get_scoreboard_entries and supports paper teleportation better.
get_scoreboard_entries allows for iteration across potentially unknown
entries, particularly useful when interacting with other plugins. By
default, teleportation of an entity simply fails if the entity has
passengers, requiring dismounting, teleporting, then remounting of
passengers. While perhaps useful to block unintentional passenger
teleportation, this is likely unexpected behavior for most users. This
PR adds support for Paper's TeleportFlag.EntityState.RETAIN_PASSENGERS,
which allows teleportation to occur, including passengers. Spigot
servers will retain the existing behavior, as it contains no equivalent
functionality.